# google-scholar-research

./: README.md  cleanup.py  google_scholar_research_tool.py  install_rooflow.cmd  proxy_blacklist.json  requirements.txt
.roo/: system-prompt-flow-architect  system-prompt-flow-ask  system-prompt-flow-code  system-prompt-flow-debug  system-prompt-flow-orchestrator
docs/: GoogleScholarResearchToolOverview.md  GoogleScholarResearchToolTechnicalDocumentation.md  GoogleScholarResearchToolTesting.md
google_scholar_scraper/: README.md  google_scholar_research_tool.py  proxy_blacklist.json  pyproject.toml  scholar_data.db
google_scholar_scraper/google_scholar_scraper/: __init__.py  author_profile_parser.py  data_handler.py  exceptions.py  fetcher.py  graph_builder.py  main.py  parser.py  proxy_blacklist.json  proxy_manager.py  query_builder.py  results.csv  scholar_data.db  utils.py
google_scholar_scraper/tests/: README.md  conftest.py  requirements-test.txt  run_tests.py  test_author_profile_parser.py  test_data_handler.py  test_fetcher.py  test_graph_builder.py  test_main.py  test_models.py  test_parser.py  test_proxy_manager.py  test_query_builder.py  test_utils.py
google_scholar_scraper/tests/data/: __init__.py  algorithmic trading strategies cryptocurrency - Google Scholar.html  sample_search_result.html
memory-bank/: activeContext.md  decisionLog.md  productContext.md  progress.md  systemPatterns.md
probe/: probe-proxy.py  proxy-probe.ipynb
scholar_scraper/: pyproject.toml
scholar_scraper/scholar_scraper/: data_handler.py  exceptions.py  fetcher.py  graph_builder.py  main.py  models.py  parser.py  proxy_manager.py  query_builder.py  utils.py
